# choto-vacansii

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  requirements.txt
backend/saiga/: Dockerfile  README.md  config.properties  conversation.py  handler.py  pyproject.toml
backend/saiga/src/: conversation.py
front/: .temp.xlsx  1_Интерактивный_режим.py  run.sh
front/common/: export.py  params.py
front/pages/: 2_Обработка_файла.py
front/utils/: export.py
frontend/: 1_Интерактивный_режим.py  1_Чисто_показуха.py  run.sh
frontend/common/: export.py  generation.py
frontend/pages/: 2_Обработка_файла.py
notebooks/: EDA.ipynb  amogus.ipynb  play.ipynb
