[tool.poetry]
name = "saiga"
version = "0.1.0"
description = "LLM for job vacancy structuring"
authors = ["Daniil Semenov <49916703+sicutglacies@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
torch = "^2.0.1"
requests = "^2.31.0"
torchserve = "^0.8.1"
numpy = "^1.25.0"
torch-model-archiver = "^0.8.1"
transformers = "^4.30.2"
peft = "^0.3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
